modelo de recomendacion

--- a/PI01EDA.ipynb
+++ b/PI01EDA.ipynb
@@ -3277,7 +3277,10 @@
     "data['title'] = data['title'].replace(':', '')\n",
     "data['title'] = data['title'].replace('-', '')\n",
     "#*********************************************\n",
-    "df_similitud_titulos = data['title'].tolist()\n",
+    "\n",
+    "#Reduzco el dataset por falta de memoria al momento de guardar el array\n",
+    "df_reducido = data.head(5000)\n",
+    "df_similitud_titulos = df_reducido['title'].tolist()\n",
     "\n"
    ]
   },
