modelo de recomendacion depurado

--- a/PI01RS.ipynb
+++ b/PI01RS.ipynb
@@ -36,10 +36,14 @@
     "\n",
     "    search_df = pd.DataFrame(columnas_df, index=etiquetas_filas).T\n",
     "\n",
-    "    ultima_columna = etiquetas_filas[len(etiquetas_filas) - 1]\n",
-    "\n",
     "    \n",
+    "    # Referencia a la última columna y anteúltima para eliminar valores = 0 \n",
+    "    ultima_columna = etiquetas_filas[len(etiquetas_filas) - 1]\n",
     "    search_df = search_df[search_df[ultima_columna] > 0]\n",
+    "    if len(etiquetas_filas) > 1:\n",
+    "        anteultima_columna = etiquetas_filas[len(etiquetas_filas) - 2]\n",
+    "        search_df = search_df[search_df[anteultima_columna] > 0]\n",
+    "    \n",
     "    test = search_df.sort_values([ultima_columna], ascending=[False])\n",
     "    ranking5 = test.head(5)\n",
     "\n",
