--- a/PI01RS.ipynb
+++ b/PI01RS.ipynb
@@ -19,31 +19,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recomendacion( titulo: str ):\n",
-    "    df_similitud_titulos = df['title'].tolist()\n",
+    "df = pd.read_csv('./Dataset/datosMoviesPI01.csv',  encoding='utf-8')\n",
+    "\n",
+    "def recomendacion( titulo: str ): \n",
+    "\n",
+    "    # Verificar si el título existe en el DataFrame original\n",
+    "    if titulo not in df['title'].values:\n",
+    "        return {'Respuesta': 'El título no existe en el DataFrame'}\n",
+    "\n",
+    "    df_reducido = df.head(2000)\n",
+    "    df_similitud_titulos = []\n",
+    "    df_similitud_titulos = df_reducido['overview'].astype(str).tolist()\n",
     "    \n",
     "    tfidf_vectorizer = TfidfVectorizer(stop_words='english', use_idf=True)\n",
     "    df_similitud_titulos2 = tfidf_vectorizer.fit_transform(df_similitud_titulos)\n",
     "    df_tfidf = pd.DataFrame(df_similitud_titulos2.toarray(),columns=tfidf_vectorizer.get_feature_names_out())\n",
     "\n",
     "    titulo_buscar = titulo\n",
-    "    titulo_buscar = titulo_buscar.lower()\n",
+    "    #titulo_buscar = titulo_buscar.lower()\n",
+    "    overview_buscado = df_reducido.loc[df_reducido['title'] == titulo_buscar, 'overview'].iloc[0].split()\n",
+    "    palabras_clave = overview_buscado\n",
     "    \n",
-    "    palabras_clave = titulo_buscar.split()\n",
+    "    #palabras_clave = titulo_buscar.split()\n",
     "    columnas_df = [df_tfidf[palabra] for palabra in palabras_clave]\n",
     "    columnas_df.append(sum(columnas_df))\n",
     "    etiquetas_filas = palabras_clave + [\" + \".join(palabras_clave)]\n",
     "\n",
     "    search_df = pd.DataFrame(columnas_df, index=etiquetas_filas).T\n",
     "\n",
-    "    \n",
     "    # Referencia a la última columna y anteúltima para eliminar valores = 0 \n",
     "    ultima_columna = etiquetas_filas[len(etiquetas_filas) - 1]\n",
     "    search_df = search_df[search_df[ultima_columna] > 0]\n",
     "    if len(etiquetas_filas) > 1:\n",
     "        anteultima_columna = etiquetas_filas[len(etiquetas_filas) - 2]\n",
     "        search_df = search_df[search_df[anteultima_columna] > 0]\n",
-    "    \n",
+    "\n",
     "    test = search_df.sort_values([ultima_columna], ascending=[False])\n",
     "    ranking5 = test.head(5)\n",
     "\n",
@@ -52,13 +62,58 @@
     "    peliculas_recomendadas = []\n",
     "    recomendadas = ranking5.index\n",
     "    peliculas_recomendadas = [df_similitud_titulos[indice] for indice in recomendadas]\n",
-    "    return {peliculas_recomendadas}"
+    "    return peliculas_recomendadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'utf-8'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import chardet\n",
+    "\n",
+    "# Leer el archivo en modo binario\n",
+    "with open('./Dataset/datosMoviesPI01.csv', 'rb') as file:\n",
+    "    result = chardet.detect(file.read())\n",
+    "\n",
+    "# Obtener la codificación detectada\n",
+    "encoding = result['encoding']\n",
+    "\n",
+    "# Leer el archivo CSV con la codificación detectada\n",
+    "#data = pd.read_csv('archivo.csv', encoding=encoding)\n",
+    "encoding"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
